# vim_eof_comment

./: .flake8  .gitignore  .pre-commit-config.yaml  Makefile  Pipfile  README.md  pyproject.toml  requirements.txt
.github/workflows/: mypy-lint.yml  python-publish.yml  release.yml
vim-eof-comment/: args.py  eof.pyi  file.pyi
vim_eof_comment/: __init__.py  __init__.pyi  __main__.py  args.pyi  comments.py  comments.pyi  eof.py  eof.pyi  file.py  file.pyi  regex.py  regex.pyi  util.py  util.pyi  version.py  version.pyi
vim_eof_comment/args/: __init__.py  __init__.pyi  color.py  color.pyi  completion.py  completion.pyi  parsing.py  parsing.pyi
vim_eof_comment/comments/: generator.py  generator.pyi  types.py  types.pyi
vim_eof_comment/types/: typeddict.py  typeddict.pyi  version.py  version.pyi
