[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name="vim_eof_comment"
authors = [
    {name = "Guennadi Maximov C", email = "g.maxc.fox@protonmail.com"}
]
maintainers = [
    {name = "Guennadi Maximov C", email = "g.maxc.fox@protonmail.com"}
]
description = "Adds Vim EOF comments for given filetypes in given directories"
version = "0.1.3"
requires-python = ">=3.10"
license = "GPL-2.0-only"
readme = "README.md"
dependencies = [
    "setuptools",
    "argparse",
    "typing"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
    "Topic :: Text Processing :: Filters",
    "Topic :: Utilities",
    "Typing :: Typed"
]

[project.scripts]
vim-eof-comment = "vim_eof_comment.eof:main"

[project.urls]
Homepage = "https://github.com/DrKJeff16/vim_eof_comment"
Issues = "https://github.com/DrKJeff16/vim_eof_comment/issues"
