[build-system]
build-backend = "setuptools.build_meta"
requires      = ["setuptools", "setuptools-scm>=8.0"]

[project]
authors = [{ name = "Guennadi Maximov C", email = "g.maxc.fox@protonmail.com" }]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python",
    "Topic :: Text Processing :: Filters",
    "Topic :: Utilities",
    "Typing :: Typed",
]
dependencies = ["argcomplete", "argparse", "colorama", "setuptools", "typing", "wheel"]
description = "Adds Vim EOF comments for given filetypes in given directories"
license = "GPL-2.0-only"
maintainers = [{ name = "Guennadi Maximov C", email = "g.maxc.fox@protonmail.com" }]
name = "vim-eof-comment"
readme = "README.md"
requires-python = ">=3.10"
version = "0.3.4"

    [project.scripts]
    vim-eof-comment = "vim_eof_comment.eof:main"

    [project.urls]
    Issues     = "https://github.com/DrKJeff16/vim-eof-comment/issues"
    Repository = "https://github.com/DrKJeff16/vim-eof-comment"

[tool.numpydoc_validation]
checks = [
    "all",  # report on all checks, except the below
    "ES01",
    "EX01",
    "SA01",
]
exclude = [
    '\.undocumented_method$',
    '__call__$',
    '__dict__$',
    '__eq__$',
    '__init__$',
    '__repr__$',
    '__str__$',
]
exclude_files = ['^module/gui.*', '^tests/.*']

[tool.setuptools.package-data]
"*" = ["*.json"]
